# RCM

./: .gitignore  CMakeLists.txt  GteIntrCapsule3Capsule3.h  RCM.cpp  RCM.sln  RCM.vcxproj  RCM.vcxproj.filters  RCMORIG.cpp  ReadMe.txt  Smarticle.cpp  Smarticle.h  buildingNotes.txt  rcm.m  stdafx.cpp
scripts/: BatchRunRCM.sh  SaveRCMRunsIntoMat.m  SingleRunRCM.sh  Winrun.sh  parse_rcm_runs.m  phiErr.mat  phiSurf.mat  plotRcmSurface.m  rcm.m  rhoentPlot.m  test.m  tubeplot.m
src/: RCM.cpp  Smarticle.cpp
